--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@editorjs/list": "^1.6.0",
     "@editorjs/quote": "^2.4.0",
     "@lhci/cli": "^0.6.1",
-    "@sentry/apm": "^5.15.5",
     "@saleor/sdk": "^0.3.0-6",
+    "@sentry/apm": "^5.15.5",
     "@sentry/browser": "^5.15.5",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.3.2",
     "@testing-library/cypress": "^5.3.0",
+    "@tinymce/tinymce-react": "^3.12.0",
     "@types/react-test-renderer": "^17.0.0",
     "@types/yup": "^0.26.27",
     "apollo": "^2.21.3",
