--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "@types/faker": "^4.1.5",
     "@types/graphql": "^14.2.2",
     "@types/history": "^4.7.2",
+    "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^24.0.14",
     "@types/lodash": "^4.14.119",
     "@types/node": "^11.10.4",
