--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@editorjs/list": "^1.6.0",
     "@editorjs/quote": "^2.4.0",
     "@lhci/cli": "^0.6.1",
+    "@material-ui/core": "latest",
+    "@material-ui/icons": "^4.11.2",
     "@saleor/sdk": "^0.3.0-6",
     "@sentry/apm": "^5.15.5",
     "@sentry/browser": "^5.15.5",
@@ -187,8 +189,8 @@
     "workbox-webpack-plugin": "^6.0.2"
   },
   "engines": {
-      "node": "14.2.0",
-      "npm": "6.14.13"
+    "node": "14.2.0",
+    "npm": "6.14.13"
   },
   "husky": {
     "hooks": {
