[JR-139] Configure PKB using env vars

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ NEXT_PUBLIC_DEMO_MODE=false
 NEXT_PUBLIC_GTM_ID=
 NEXT_PUBLIC_SENTRY_APM=0
 NEXT_PUBLIC_SENTRY_DSN=
+
+NEXT_PUBLIC_PKB_URI=http://localhost:8000/pkb/
+NEXT_PUBLIC_PKB_AUTH=
