--- a/.env
+++ b/.env
@@ -8,3 +8,10 @@ NEXT_PUBLIC_SENTRY_DSN=
 
 NEXT_PUBLIC_PKB_URI=http://localhost:8000/pkb/
 NEXT_PUBLIC_PKB_AUTH=
+
+# openssl rand -hex 32
+AUTH0_SECRET=
+AUTH0_BASE_URL=http://localhost:3000
+AUTH0_ISSUER_BASE_URL=https://vonq.eu.auth0.com
+AUTH0_CLIENT_ID=zSO0BrRlAiktf3zqargnT14CPgOXd4yV
+AUTH0_CLIENT_SECRET=
