--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@editorjs/list": "^1.6.0",
     "@editorjs/quote": "^2.4.0",
     "@lhci/cli": "^0.6.1",
-    "@material-ui/core": "^4.11.4",
+    "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@saleor/sdk": "^0.3.0-6",
     "@sentry/apm": "^5.15.5",
     "@sentry/browser": "^5.15.5",
@@ -52,7 +53,7 @@
     "history": "^4.7.2",
     "isomorphic-fetch": "^2.2.1",
     "js-base64": "^2.4.8",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.21",
     "next": "^10.0.3",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.6.2",
