--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ NEXT_PUBLIC_SENTRY_APM=0
 NEXT_PUBLIC_SENTRY_DSN=
 
 NEXT_PUBLIC_PKB_URI=http://localhost:8000/pkb/
-NEXT_PUBLIC_VACANCY_URI=
+NEXT_PUBLIC_VACANCY_URI=http://localhost:8082
