--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@saleor/sdk": "^0.3.0-6",
     "@sentry/apm": "^5.15.5",
     "@sentry/browser": "^5.15.5",
     "@stripe/react-stripe-js": "^1.1.2",
@@ -29,6 +28,7 @@
     "@types/react-test-renderer": "^17.0.0",
     "@types/yup": "^0.26.27",
     "apollo": "^2.21.3",
+    "apollo-cache": "^1.3.5",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.5.1",
@@ -38,6 +38,7 @@
     "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.4",
     "apollo-link-retry": "^2.2.5",
+    "apollo-utilities": "^1.3.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "braintree-web": "^3.38.1",
     "classnames": "^2.2.6",
