--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@testing-library/cypress": "^5.3.0",
     "@tinymce/tinymce-react": "^3.12.6",
     "@types/yup": "^0.26.27",
+    "abortcontroller-polyfill": "^1.7.3",
     "apollo": "^2.32.1",
+    "apollo-cache": "^1.3.5",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.6.10",
@@ -30,6 +32,7 @@
     "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
     "apollo-link-retry": "^2.2.16",
+    "apollo-utilities": "^1.3.4",
     "autoprefixer": "^9.8.6",
     "braintree-web": "^3.38.1",
     "classnames": "^2.2.6",
@@ -51,6 +54,7 @@
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.7.0",
     "next-optimized-images": "^2.6.2",
+    "node-fetch": "^2.6.1",
     "nuka-carousel": "^4.6.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.12.1",
@@ -156,7 +160,6 @@
     "lint-staged": "^10.2.9",
     "mini-css-extract-plugin": "^0.4.1",
     "next-transpile-modules": "^6.0.0",
-    "node-fetch": "^2.6.1",
     "node-sass": "^4.14.1",
     "plop": "^2.7.1",
     "postcss": "^8.3.4",
